basic page setup

--- a/app/(site)/layout.module.css
+++ b/app/(site)/layout.module.css
@@ -30,6 +30,10 @@
 }
 
 .pageContent {
-  margin-top: 70px;
   padding: 10px;
+  padding-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
