--- a/app/(site)/layout.module.css
+++ b/app/(site)/layout.module.css
@@ -21,8 +21,10 @@
   height: 30px;
 }
 
-.navbar a {
+.navbar li a {
+  text-decoration: none;
   transition: .5s;
+  color: white;
 }
 
 .navbar a:hover {
