--- a/app/(site)/featured_artist/artist.module.css
+++ b/app/(site)/featured_artist/artist.module.css
@@ -1,24 +1,26 @@
 .artist {
   background-color: #0F230F;
   border-radius: 10px;
-  padding: 15px;
+  padding: 20px;
   color: white;
   margin: 5px;
   width: 90%;
   min-width: 200px;
-  max-width: 900px;
+  max-width: 1000px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: space-around;
   flex-direction: row;
   gap: 10px;
 
 }
 
 .info {
+  gap: 10px;
   display: flex;
   flex-direction: column;
-  height: 300px;
+  height: 100%;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -27,11 +29,46 @@
   color: white;
 }
 
+.infoHead {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .artist {
     margin: 5px 0;
     width: 100%;
     flex-direction: column;
+    align-items: center;
   }
+
+  div.swiper,
+  .swiper::before,
+  .swiper * {
+    width: 200px;
+    height: 320px;
+  }
+
+
+
+}
+
+.swiper {
+  width: 400px;
+  height: 620px;
+  margin: 10px;
+}
+
+.swiper img {
+  object-fit: cover;
+  width: 400px;
+  height: 620px;
+}
+
+.swiperSlide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
 }
