--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background-color: #456041ae;
+  border-radius: 20px;
+  outline: 2px solid #0F230F;
+  padding: 10px;
 }
 
 .main img {
@@ -19,4 +23,16 @@
 .main p {
   text-align: center;
   color: white;
+
+}
+
+.video {
+  height: 100%;
+
+  filter: blur(5px);
+  float: left;
+  top: 0;
+  padding: none;
+  position: fixed;
+  z-index: -5;
 }
