--- a/app/(site)/schedule/schedule.module.css
+++ b/app/(site)/schedule/schedule.module.css
@@ -1,7 +1,16 @@
+.borderBox {
+  border: 3px rgba(165, 165, 165, 0.527) double;
+  border-radius: 50px;
+  box-shadow: 1px 1px 10px 1px inset rgba(128, 128, 128, 0.39);
+  display: grid;
+  justify-items: center;
+  padding: 10px;
+  margin: 10px;
+}
+
 .card {
   border: 4px inset;
-  border-radius: 10px;
-  backdrop-filter: "glow";
+  border-radius: 15px;
   box-shadow: 0px 5px 5px 1px inset rgba(128, 128, 128, 0.671);
   margin: 5px;
   padding: 10px;
