--- a/app/(site)/schedule/schedule.module.css
+++ b/app/(site)/schedule/schedule.module.css
@@ -9,9 +9,17 @@
 }
 
 .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 4px inset;
   border-radius: 15px;
   box-shadow: 0px 5px 5px 1px inset rgba(128, 128, 128, 0.671);
   margin: 5px;
   padding: 10px;
+}
+
+.mapUrlBox {
+  justify-content: center;
+  align-items: center;
 }
