--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -28,11 +28,16 @@
 
 .video {
   height: 100%;
-
   filter: blur(5px);
   float: left;
   top: 0;
   padding: none;
   position: fixed;
   z-index: -5;
+}
+
+@media only screen and (max-width: 600px) {
+  .video {
+    visibility: hidden;
+  }
 }
