--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -6,6 +6,8 @@
   border-radius: 20px;
   outline: 2px solid #0F230F;
   padding: 10px;
+  text-align: center;
+  max-width: 800px;
 }
 
 .main img {
@@ -26,9 +28,14 @@
 
 }
 
+.main a {
+  text-decoration: unset;
+  color: white;
+}
+
 .video {
   height: 100%;
-  filter: blur(5px);
+  filter: blur(3px);
   float: left;
   top: 0;
   padding: none;
