--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -2,12 +2,14 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: #456041ae;
-  border-radius: 20px;
+  background-color: #456041cb;
+  border-radius: 5px;
   outline: 2px solid #0F230F;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   max-width: 800px;
+  gap: 10px;
+  box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.458);
 }
 
 .main img {
