--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -37,7 +37,7 @@
 
 .video {
   height: 100%;
-  filter: blur(3px);
+  filter: blur(5px);
   float: left;
   top: 0;
   padding: none;
@@ -47,6 +47,15 @@
 
 @media only screen and (max-width: 600px) {
   .video {
-    visibility: hidden;
+    width: 100%;
+    margin-top: 20px;
+    height: unset;
+    float: unset;
+    top: unset;
+    position: relative;
+    border-radius: 5px;
+    outline: 1px solid black;
+    box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.458);
+    filter: none;
   }
 }
