set up endpoint

--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: linear-gradient(to right top, #0a2007c7, #548b4dae);
+  background: radial-gradient(circle at center, #548b4dae, #0a2007c7);
   border-radius: 20px;
   outline: 2px solid #0F230F;
   padding: 20px;
