--- a/app/(site)/layout.module.css
+++ b/app/(site)/layout.module.css
@@ -46,3 +46,9 @@
   justify-content: center;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 500px) {
+  .navbar ul {
+    gap: 5px
+  }
+}
