--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,20 @@
+@font-face {
+  font-family: inter;
+  src: url('inter.ttf');
+}
+
+@font-face {
+  font-family: lobster;
+  src: url('./lob.ttf');
+}
+
 html {
   box-sizing: border-box;
   font-size: 16px;
 }
 
 body {
-  background: linear-gradient(to right top, #122c10, #40683b);
+  background: #40683b;
 }
 
 *,
@@ -26,6 +36,22 @@ ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: lobster, 'Courier New', Courier, monospace;
+}
+
+a,
+p,
+li {
+  font-size: medium;
+  font-family: inter, 'Courier New', Courier, monospace;
 }
 
 ol,
