--- a/app/(site)/layout.module.css
+++ b/app/(site)/layout.module.css
@@ -8,7 +8,7 @@
   position: fixed;
   width: 100%;
   z-index: 20;
-  box-shadow: 0 0 5px black;
+  box-shadow: 3px 3px 5px black;
 }
 
 .navbar ul {
@@ -22,6 +22,7 @@
 .navbar>img {
   width: 50px;
   height: auto;
+  margin-left: .5rem;
 }
 
 .navbar hr {
@@ -32,6 +33,10 @@
   text-decoration: none;
   transition: .5s;
   color: white;
+}
+
+.navbar li:last-of-type {
+  margin-right: 1rem;
 }
 
 .navbar a:hover {
