--- a/app/(site)/featured_artist/artist.module.css
+++ b/app/(site)/featured_artist/artist.module.css
@@ -12,7 +12,13 @@
   justify-content: space-around;
   flex-direction: row;
   gap: 10px;
-  box-shadow: 3px 3px 5px black;
+
+  box-shadow: 3px 3px 10px black, inset 0 0 10px yellow;
+}
+
+.artist h1 {
+  font-size: 3rem;
+  text-shadow: 3px 3px 10px black;
 }
 
 .month {
