--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -2,20 +2,22 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: radial-gradient(circle at center, #548b4dc8, #0a2007c7);
+  background: radial-gradient(circle at center, #0F230Fc7 20%, black 200%);
   border-radius: 10px;
-  outline: 2px solid #0F230F;
+  /* outline: 2px solid #0F230F; */
   padding: 20px;
   text-align: center;
   max-width: 800px;
   gap: 10px;
-  box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.458);
+  box-shadow: inset 0px 0px 10px rgba(251, 255, 5, 0.458), 0 0 20px 10px #000000a6;
+  ;
 }
 
 .main img {
   width: 100%;
   margin: auto;
   max-width: 1000px;
+  filter: drop-shadow(1px 5px 20px black)
 }
 
 .main h1 {
