some style, code clean up, with fixing bug w slug

--- a/app/(site)/about/page.module.css
+++ b/app/(site)/about/page.module.css
@@ -12,7 +12,7 @@
   justify-content: space-around;
   flex-direction: row;
   gap: 10px;
-  box-shadow: 3px 3px 5px black;
+  box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), 3px 3px 10px rgba(0, 0, 0, 0.5);
   line-height: 30px;
 }
 
@@ -51,7 +51,7 @@
   width: 30px;
   padding: 5px;
   color: #0F230F;
-  background-color: white;
+  background-color: #efd380;
   border-radius: 5px;
   outline: 1px solid black;
 }
