--- a/app/globals.css
+++ b/app/globals.css
@@ -11,12 +11,12 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   background: #40683b;
-  height: 100%;
+  height: 100vh;
 }
 
 *,
@@ -72,19 +72,20 @@ section {
   position: fixed;
   width: 100%;
   height: 100%;
+  bottom: 0;
   background: linear-gradient(0deg, #0F230F, #40683b);
   overflow: hidden;
   z-index: -2;
 }
 
 section .air {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100px;
   background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
-  background-size: 1000px 100px
+  background-size: 1000px 100px;
 }
 
 section .air.air1 {
