--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -35,7 +35,9 @@
 }
 
 .video {
-  height: 100%;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
   filter: blur(5px);
   float: left;
   top: 0;
