--- a/app/(site)/featured_artist/artist.module.css
+++ b/app/(site)/featured_artist/artist.module.css
@@ -1,6 +1,7 @@
 .artist {
-  background-color: #0f230f;
+  background: radial-gradient(#6eae6e99 10%, #0F230Fc7 90%);
   border-radius: 10px;
+  backdrop-filter: blur(10px);
   padding: 20px;
   color: white;
   margin: 5px;
@@ -11,7 +12,7 @@
   align-items: flex-start;
   justify-content: space-around;
   flex-direction: row;
-  gap: 10px;
+  gap: 30px;
   box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), 3px 3px 10px rgba(0, 0, 0, 0.5);
 }
 
