--- a/app/(site)/featured_artist/artist.module.css
+++ b/app/(site)/featured_artist/artist.module.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
-  flex-direction: row;
+  /* flex-direction: row; */
   gap: 30px;
   box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), 3px 3px 10px rgba(0, 0, 0, 0.5);
 }
