--- a/app/(site)/featured_artist/artist.module.css
+++ b/app/(site)/featured_artist/artist.module.css
@@ -16,6 +16,12 @@
   box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), 3px 3px 10px rgba(0, 0, 0, 0.5);
 }
 
+div.swiper{
+  
+  height: 400px;
+  width: 200px;
+}
+
 .artist h1 {
   font-size: 3rem;
   text-shadow: 3px 3px 10px black;
@@ -102,8 +108,8 @@
 
 .swiper img {
   object-fit: cover;
-  width: 400px;
-  height: 620px;
+  width: 100%;
+  height: 100%;
 }
 
 .swiperSlide {
