--- a/app/(site)/about/page.module.css
+++ b/app/(site)/about/page.module.css
@@ -16,7 +16,9 @@
   box-shadow: -3px -3px 10px rgba(255, 255, 255, 0.5), 3px 3px 10px rgba(0, 0, 0, 0.5);
   line-height: 30px;
 }
-
+div.content{
+  margin-top: 15px;
+}
 .content img {
   object-fit: cover;
   height: 650px;
